--- a/src/views/log-in.ejs
+++ b/src/views/log-in.ejs
@@ -10,9 +10,9 @@
   <body>
     <form action="<%= postUri  %>" method="post">
       <label for="username">Username or email :</label>
-      <input type="text" name="username" />
+      <input type="text" name="username" required />
       <label for="password">password :</label>
-      <input type="password" name="password" />
+      <input type="password" name="password" required />
       <div class="form-btn-bar">
         <button type="submit">submit</button>
         <button type="reset">reset</button>
