--- a/src/views/topic.ejs
+++ b/src/views/topic.ejs
@@ -20,7 +20,7 @@
     </div>
     <% if(authenticated) {%>
     <div class="btn-bar">
-      <a class="btn" href="<%= createMsgUri %>"></a>
+      <a class="btn" href="<%= postMsgUri %>"> post message</a>
     </div>
     <% } %>
   </body>
